<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">简易天气</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="slogan_text_one">改变生活      自由呼吸</string>
    <string name="slogan_text_two">山西捌零科技有限公司</string>
    <string name="net_err">没有打开网络</string>
    <string name="all_rights_reserved">Copyright © 2015 Ba Ling Ke Ji. All Rights Reserved.</string>
	<string name="setting_about_description">简易生活, 简易天气！</string>
	
	<!-- 个人中心 -->
	<string name="center_title_text">个人中心</string>
	
	<string name="participate_01">连续签到</string>
	<string name="participate_02">天气转发</string>
	<string name="participate_03">公告参与</string>
	<string name="participate_04">被评论</string>
	
	<string name="mobile">手机</string>
	<string name="email">邮箱</string>
	<string name="no_verified">未验证</string>
	<string name="has_been_verified">未验证</string>
	
	
	<!-- 侧滑菜单 -->
	
	<string name="my_collection">我的收藏</string>
	<string name="browsing_history">浏览历史</string>
	<string name="member_center">会员中心</string>
	<string name="account_switching">账号切换</string>
	<string name="sign_out">退出简易</string>
	
	
</resources>