<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <!--
            com.eightzero.tianqi.tool.CircularImage
        -->

        <com.eightzero.tianqi.tool.CircularImage
            android:id="@+id/cir_user_image"
            android:layout_width="80.0dp"
            android:layout_height="80.0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25.0dp"
            android:contentDescription="@null"
            android:src="@drawable/image_default" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cir_user_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5.0dp"
            android:text="胡伟阳"
            android:textColor="@color/black"
            android:textSize="20.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30.0dp"
                android:text="@string/my_collection"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyt_browsing_history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dp"
                android:text="@string/browsing_history"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyt_member_center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dp"
                android:text="@string/member_center"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dp"
                android:text="@string/account_switching"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dp"
                android:text="@string/sign_out"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>